# ModernGUI

./: build.sh
custom_elements/: CMakeLists.txt
custom_elements/lib/: CMakeLists.txt
custom_elements/lib/include/: custom_elements.hpp
custom_elements/lib/include/custom_elements/: graph.hpp  p5playground.hpp
custom_elements/lib/src/custom_elements/: graph.cpp  p5playground.cpp
mGUI/: CMakeLists.txt  main.cpp
